--- a/_template/index.html
+++ b/_template/index.html
@@ -38,7 +38,18 @@
         </div>
     </header>
     <main id="app" class="container">
-        <div class="car-number-show-screen screen" v-show="screen == 'car-number-show'" v-cloak>
+        <div class="game-end-screen screen" v-show="screen == 'gameEnd'" v-cloak>
+            <span class="title">Конец</span>
+            <div class="body">
+                <span>Ваш счёт: </span>
+                <span v-text="score + `/` + count"></span>
+            </div>
+            <div class="footer">
+                <button class="btn btn-primary" type="button" @click="screen='none'">Продолжить</button>
+            </div>
+        </div>
+        <div class="car-number-show-screen screen" v-show="screen == 'carNumberShow'" v-cloak>
+            <button type="button" class="btn-close btn-close-white" aria-label="Close" @click="screen='none'"></button>
             <div class="score">
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
@@ -50,16 +61,31 @@
                 <small v-text="time"></small>
             </div>
         </div>
-        <div class="car-number-guess-screen screen" v-show="screen == 'car-number-guess'" v-cloak>
+        <div class="car-number-guess-screen screen" v-show="screen == 'carNumberGuess'" v-cloak>
+            <button type="button" class="btn-close btn-close-white" aria-label="Close"  @click="screen='none'"></button>
             <div class="score">
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
             </div>
             <span class="title">Попрубуйте вспомнить автомобильный номер</span>
             <small class="note">Наличие пробелов значения не имеет</small>
-            <div class="input-group mb-3 form">
-                <input class="form-control" placeholder="..." aria-label="You answer" spellcheck="false" v-model="options.answer">
+            <div class="input-group mb-3 form" ref="form">
+                <input class="form-control" placeholder="..." aria-label="You answer" spellcheck="false" v-model="options.answer" ref="input">
                 <button class="btn btn-primary" type="button" ref="btn">Ответить</button>
+            </div>
+        </div>
+        <div class="main-screen screen" v-show="screen == 'none'" v-cloak>
+            <div class="game-preview-list row">
+                <div v-for="i in settings.games" key="i.name" class="game-preview col-sm-6">
+                    <div class="title" v-text="i.title"></div>
+                    <div class="description" v-text="i.description"></div>
+                    <button class="btn btn-primary btn-start" type="button" @click="startPlainGame(i.name)">Начать</button>
+                </div>
+                <div class="game-preview col-sm-6">
+                    <div class="title">Мульти-режим</div>
+                    <div class="description">Смесь разных игр</div>
+                    <button class="btn btn-primary btn-start" type="button" @click="startMultiGame">Начать</button>
+                </div>
             </div>
         </div>
     </main>
