--- a/_template/index.html
+++ b/_template/index.html
@@ -19,9 +19,9 @@
     <header class="navbar main-navbar navbar-expand-lg mb-3">
         <div class="container navbar-inner">
             <span class="navbar-brand">MyDiary</span>
-            <span class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" aria-label="Toggle navigation">
+            <!--span class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </span>
+            </span-->
             <!--div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
