--- a/_template/index.html
+++ b/_template/index.html
@@ -53,7 +53,7 @@
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
             </div>
-            <span class="title">Попрубуйте запомнить автомобильный номер</span>
+            <span class="title">Попробуйте запомнить автомобильный номер</span>
             <div class="car-number" ref="car-number-number"></div>
             <div class="time">
                 <span>Оставшееся время: </span>
@@ -66,7 +66,7 @@
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
             </div>
-            <span class="title">Попрубуйте вспомнить автомобильный номер</span>
+            <span class="title">Попробуйте вспомнить автомобильный номер</span>
             <small class="note">Наличие пробелов значения не имеет</small>
             <div class="input-group mb-3 form">
                 <input class="form-control" aria-label="You answer" spellcheck="false" ref="car-number-input">
@@ -78,7 +78,7 @@
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
             </div>
-            <span class="title">Попрубуйте запомнить телефоный номер</span>
+            <span class="title">Попробуйте запомнить телефоный номер</span>
             <div class="phone-number" ref="phone-number-number"></div>
             <div class="time">
                 <span>Оставшееся время: </span>
@@ -91,7 +91,7 @@
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
             </div>
-            <span class="title">Попрубуйте вспомнить телефоный номер</span>
+            <span class="title">Попробуйте вспомнить телефоный номер</span>
             <small class="note">Наличие "+7" значения не имеет</small>
             <div class="input-group mb-3 form">
                 <input class="form-control" aria-label="You answer" spellcheck="false" ref="phone-number-input">
@@ -103,7 +103,7 @@
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
             </div>
-            <span class="title">Попрубуйте запомнить фрагмент книги "<span ref="paragraph-name"></span>"</span>
+            <span class="title">Попробуйте запомнить фрагмент книги "<span ref="paragraph-name"></span>"</span>
             <div class="paragraph-text" ref="paragraph-text"></div>
             <div class="time">
                 <span>Оставшееся время: </span>
@@ -116,7 +116,7 @@
                 <span>Счет: </span>
                 <span v-text="score + `/` + count"></span>
             </div>
-            <span class="title">Попрубуйте вспомнить фрагмент текста</span>
+            <span class="title">Попробуйте вспомнить фрагмент текста</span>
             <div class="input-group mb-3 form">
                 <textarea class="form-control" aria-label="You answer" spellcheck="false" ref="paragraph-input"></textarea>
                 <button class="btn btn-primary" type="button" ref="paragraph-btn">Ответить</button>
